--- a/doc-sass/pages/_accueil.scss
+++ b/doc-sass/pages/_accueil.scss
@@ -2,10 +2,109 @@ header{
     display:flex;
     justify-content: center;
     padding: 10px;
-    box-shadow: 0px 1px 3px 0px black;
     img{
         width: 200;
         height: 40px;
     }
 }
 
+.localiser{
+    background-color: #EAEAEA;
+    padding: 10px 0px 10px 80px;
+    box-shadow: inset 0px 6px 6px -px #c6c6c6;
+    &__form{
+        display: flex;
+        justify-content: center;
+        &--label{
+            cursor: pointer;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        &--imput{
+            border-color: transparent;
+            background: #EAEAEA; /*#f6f6f6 ;*/
+            font-size: 120%;
+            font-weight: 700;
+            opacity: 0.6;
+            padding-left: 10px;
+            &:focus{
+                outline: none;
+            }
+            &::placeholder{
+                color: #000;
+            }
+        }
+    }
+}
+
+.reserver{
+    background-color: #faf9f9;
+    padding: 50px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    &--contenu{
+        text-align: center;
+        &__text-gras{
+            width: 80%;
+            font-size: 180%;
+            margin: 0 auto;
+            padding-bottom: 1rem;
+        }
+        &__text-fin{
+            font-size: 110%;
+            width: 90%;
+            margin: 0 auto;
+            opacity: 0.6;
+        }
+    }
+}
+
+.btn-explore{
+    &--modification{
+        display: flex;
+        margin: 40px auto;
+    }
+    @include gradient(to right bottom, $secondary-color,$primary-color);
+    box-shadow: 3px 3px 3px rgb(163, 161, 161);
+    font-size: 120%;
+    padding: 20px 15px;
+    border-radius: 50px;
+    border: none;
+    color: #FFF;
+    &:hover{
+       box-shadow: 3px 3px 3px #dfdddd;
+       cursor: pointer;
+    }
+}  
+
+.fonctionnement{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    &__fonctionnement-text{
+        margin: 20px;
+        font-size: 150%;
+    }
+    &__menu-cartes{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #c6c6c6;
+        margin-bottom: 20px;
+        &__rond{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color:$primary-color;
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            color: white;
+            margin-right: 5px;
+        }
+    }
+}
