--- a/doc-sass/pages/_accueil.scss
+++ b/doc-sass/pages/_accueil.scss
@@ -1,7 +1,7 @@
 header{
     display:flex;
     justify-content: center;
-    padding: 10px;
+    padding: 15px;
     img{
         width: 200;
         height: 40px;
@@ -93,8 +93,11 @@ header{
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: #c6c6c6;
-        margin-bottom: 20px;
+        background-color: #ebebeb;
+        width: 90%;
+        margin-bottom: 30px;
+        border-radius: 25px;
+        box-shadow: 3px 3px 15px 3px #dfdddd;
         &__rond{
             display: flex;
             justify-content: center;
@@ -104,7 +107,102 @@ header{
             height: 30px;
             border-radius: 50%;
             color: white;
-            margin-right: 5px;
+            margin-left: -70px;   
         }
+        &--icon{
+            color: black;
+            opacity: 0.6;
+            margin: 0 20px 0 20px;
+        }
+        &--text{
+            font-size: 90%;
+            
+        }
+    }
+}
+
+.cards{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #ebebeb;
+    margin-top: 50px;
+    &__resto{
+        font-size: 120%;
+        font-weight: bolder;
+        margin-left: -50%;
+    }
+    &__figure{
+        width: 90%;
+        background-color: #FFF;
+        margin-bottom: 30px;
+        border-radius: 25px;
+        a{
+            text-decoration: none;
+            color: #000;
+        }
+        &--nouveau{
+            display: flex;
+            justify-content: flex-end;
+            h4{
+                margin-top: -210px;
+                margin-right: 30px;
+                p{
+                    background-color:$tertiary-color;
+                    color: #06634c;
+                    padding: 5px;
+                }
+            }
+        }
+        img{
+            height: 230px;
+            width: 100%;
+            object-fit: cover;
+            border-radius: 25px 25px 0 0;
+        }
+        &__texicon{
+            display: flex;
+            justify-content:space-between;
+            align-items: center;
+            h1{
+                font-weight: bold;
+                padding-left: 20px;
+                margin-bottom: 3px;
+            }
+            h3{
+                font-weight: 500;
+                padding-left: 20px;
+                opacity: 0.7;
+                margin-top: 0;
+            }
+            i{
+                font-size: 150%;
+                padding-right: 30px;
+            }
+
+        }
+    }
+}
+
+footer{
+    margin-top: 100px;
+    background-color: #000;
+    opacity: 0.7;
+    color: #FFF;
+    padding-left: 30px;
+    padding-bottom: 30px;
+    a{
+        text-decoration: none;
+        color: #FFF;
+    }
+    .footer__logo{
+        font-family: shrikand;
+        font-size: 90%;
+        margin-bottom: 0;
+        padding-top: 5px;
+    }
+    i{
+        margin-right: 5px;
     }
 }
