--- a/doc-sass/pages/_accueil.scss
+++ b/doc-sass/pages/_accueil.scss
@@ -1,17 +1,9 @@
-header{
-    display:flex;
-    justify-content: center;
-    padding: 15px;
-    img{
-        width: 200;
-        height: 40px;
-    }
-}
+
 
 .localiser{
     background-color: #EAEAEA;
     padding: 10px 0px 10px 80px;
-    box-shadow: inset 0px 6px 6px -px #c6c6c6;
+    box-shadow: inset 0px 6px 6px -3px #c6c6c6;
     &__form{
         display: flex;
         justify-content: center;
@@ -59,24 +51,6 @@ header{
             margin: 0 auto;
             opacity: 0.6;
         }
-    }
-}
-
-.btn-explore{
-    &--modification{
-        display: flex;
-        margin: 40px auto;
-    }
-    @include gradient(to right bottom, $secondary-color,$primary-color);
-    box-shadow: 3px 3px 3px rgb(163, 161, 161);
-    font-size: 120%;
-    padding: 20px 15px;
-    border-radius: 50px;
-    border: none;
-    color: #FFF;
-    &:hover{
-       box-shadow: 3px 3px 3px #dfdddd;
-       cursor: pointer;
     }
 }  
 
@@ -128,6 +102,7 @@ header{
     align-items: center;
     background-color: #ebebeb;
     margin-top: 50px;
+    padding-bottom: 30px;
     &__resto{
         font-size: 120%;
         font-weight: bolder;
@@ -186,12 +161,12 @@ header{
 }
 
 footer{
-    margin-top: 100px;
+    padding-top: 30px;
     background-color: #000;
     opacity: 0.7;
     color: #FFF;
     padding-left: 30px;
-    padding-bottom: 30px;
+    padding-bottom: 40px;
     a{
         text-decoration: none;
         color: #FFF;
