--- a/doc-sass/main.scss
+++ b/doc-sass/main.scss
@@ -5,6 +5,7 @@
 @import "./pages/menu";
 @import "./layout/header";
 @import "./components/button";
+@import "./utils/animations";
 
 *{
     box-sizing: border-box;
