--- a/doc-css/style-projet3.css
+++ b/doc-css/style-projet3.css
@@ -1,17 +1,73 @@
-header {
+/**
+
+*, *::before, *::after{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    background: #c5cae9;
+  }**/
+.box {
+  background: #fff;
   display: flex;
   justify-content: center;
-  padding: 10px;
-}
-header img {
-  width: 200;
-  height: 40px;
+  align-items: center;
 }
 
+.container {
+  height: 30px;
+  width: 150px;
+  display: flex;
+  position: relative;
+  top: 300px;
+  animation: chargement 4s forwards;
+}
+.container .circle {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background: #9356DC;
+  animation: translater 500ms linear 0s infinite;
+  margin-right: 30px;
+}
+.container .circle:first-child {
+  position: absolute;
+  top: 0;
+  left: 0;
+  animation: agrandir 500ms linear 0ms infinite;
+}
+.container .circle:last-child {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-right: 0;
+  animation: agrandir 1000ms linear 0s infinite reverse;
+}
+
+@keyframes chargement {
+  0% {
+    visibility: visible;
+  }
+  100% {
+    visibility: hidden;
+  }
+}
+.loading-home {
+  animation: accueil-chargement 5s forwards;
+}
+
+/******/
 .localiser {
   background-color: #EAEAEA;
   padding: 10px 0px 10px 80px;
-  box-shadow: inset 0px 6px 6px -px #c6c6c6;
+  box-shadow: inset 0px 6px 6px -3px #c6c6c6;
 }
 .localiser__form {
   display: flex;
@@ -61,6 +117,263 @@ header img {
   opacity: 0.6;
 }
 
+.fonctionnement {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.fonctionnement__fonctionnement-text {
+  margin: 20px;
+  font-size: 150%;
+}
+.fonctionnement__menu-cartes {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ebebeb;
+  width: 90%;
+  margin-bottom: 30px;
+  border-radius: 25px;
+  box-shadow: 3px 3px 15px 3px #dfdddd;
+}
+.fonctionnement__menu-cartes__rond {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #9356DC;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  color: white;
+  margin-left: -70px;
+}
+.fonctionnement__menu-cartes--icon {
+  color: black;
+  opacity: 0.6;
+  margin: 0 20px 0 20px;
+}
+.fonctionnement__menu-cartes--text {
+  font-size: 90%;
+}
+
+.cards {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #ebebeb;
+  margin-top: 50px;
+  padding-bottom: 30px;
+}
+.cards__resto {
+  font-size: 120%;
+  font-weight: bolder;
+  margin-left: -50%;
+}
+.cards__figure {
+  width: 90%;
+  background-color: #FFF;
+  margin-bottom: 30px;
+  border-radius: 25px;
+}
+.cards__figure a {
+  text-decoration: none;
+  color: #000;
+}
+.cards__figure--nouveau {
+  display: flex;
+  justify-content: flex-end;
+}
+.cards__figure--nouveau h4 {
+  margin-top: -210px;
+  margin-right: 30px;
+}
+.cards__figure--nouveau h4 p {
+  background-color: #99E2D0;
+  color: #06634c;
+  padding: 5px;
+}
+.cards__figure img {
+  height: 230px;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 25px 25px 0 0;
+}
+.cards__figure__texicon {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.cards__figure__texicon h1 {
+  font-weight: bold;
+  padding-left: 20px;
+  margin-bottom: 3px;
+}
+.cards__figure__texicon h3 {
+  font-weight: 500;
+  padding-left: 20px;
+  opacity: 0.7;
+  margin-top: 0;
+}
+.cards__figure__texicon i {
+  font-size: 150%;
+  padding-right: 30px;
+}
+.cards__figure__texicon i:hover {
+  animation: icon-heart 1500ms ease forwards;
+  cursor: pointer;
+}
+
+footer {
+  padding-top: 30px;
+  background-color: #000;
+  opacity: 0.7;
+  color: #FFF;
+  padding-left: 30px;
+  padding-bottom: 40px;
+}
+footer a {
+  text-decoration: none;
+  color: #FFF;
+}
+footer .footer__logo {
+  font-family: shrikand;
+  font-size: 90%;
+  margin-bottom: 0;
+  padding-top: 5px;
+}
+footer i {
+  margin-right: 5px;
+}
+
+.image-menu {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+
+/****/
+.menu {
+  display: flex;
+  flex-direction: column;
+  background-color: #EAEAEA;
+  border-radius: 50px 50px 0 0;
+  margin-top: -80px;
+  padding-bottom: 30px;
+  width: 100%;
+}
+.menu__titre {
+  background-color: #EAEAEA;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 80px;
+  border-radius: 50px 50px 0 0;
+}
+.menu__titre h1 {
+  padding-left: 30px;
+  font-family: shrikand;
+  font-size: 30px;
+  font-weight: 600;
+}
+.menu__titre i {
+  padding-right: 15%;
+  padding-left: 2px;
+  font-size: 150%;
+}
+.menu__titre i:hover {
+  animation: icon-heart 1500ms ease forwards;
+  cursor: pointer;
+}
+.menu__sous-titre {
+  padding-top: 5px;
+  padding-left: 5%;
+  margin-top: 30px;
+  font-size: 120%;
+}
+.menu__sous-titre__tiret {
+  margin-top: 5px;
+  width: 50px;
+  height: 4px;
+  background-color: #99E2D0;
+}
+.menu__contenu {
+  background-color: #fff;
+  margin: 20px 20px 0 20px;
+  border-radius: 25px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 95px;
+}
+.menu__contenu--descrip {
+  padding-left: 5px;
+  width: 80%;
+}
+.menu__contenu--descrip h2 {
+  font-size: 120%;
+  margin-bottom: 5px;
+}
+.menu__contenu--descrip p {
+  font-size: 100%;
+  margin-top: 0;
+}
+.menu__contenu--somme {
+  padding-top: 5%;
+  margin-right: -10px;
+}
+.menu__contenu--icon {
+  width: 60px;
+  height: 95px;
+  background-color: #99E2D0;
+  border-radius: 0 25px 25px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform-origin: 100% 50%;
+  transform: translateX(1%) scale(0, 1);
+}
+.menu__contenu:hover {
+  cursor: pointer;
+  transition: 0.5s ease;
+  box-shadow: 3px 3px 3px #979797;
+}
+.menu__contenu:hover .menu__contenu--descrip {
+  width: 70%;
+  transition: 0.5s;
+}
+.menu__contenu:hover .menu__contenu--icon {
+  transform: translateX(0%) scale(1);
+  transition: 0.5s ease;
+}
+.menu__contenu:hover .menu__contenu--icon i {
+  animation: check-rotation 0.5s;
+}
+.menu--modification-button {
+  width: 50%;
+  margin: 30px 30px 30px 25%;
+  text-align: center;
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  padding: 15px;
+}
+header img {
+  width: 200px;
+  height: 40px;
+}
+header .retour {
+  position: relative;
+  right: 20%;
+  font-size: xx-large;
+}
+header .retour i {
+  color: black;
+}
+
 .btn-explore {
   background: linear-gradient(to right bottom, #FF79DA, #9356DC);
   box-shadow: 3px 3px 3px rgb(163, 161, 161);
@@ -79,35 +392,67 @@ header img {
   cursor: pointer;
 }
 
-.fonctionnement {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+/*animer l'icon pour selection des choix*/
+@keyframes check-rotation {
+  0% {
+    transform: rotate(0deg);
+    margin: 0;
+  }
+  30% {
+    transform: rotate(0deg);
+  }
+  100% {
+    margin: 0 2rem;
+    transform: rotate(360deg);
+  }
 }
-.fonctionnement__fonctionnement-text {
-  margin: 20px;
-  font-size: 150%;
+/* animation icon coeur*/
+@keyframes icon-heart {
+  0% {
+    font-weight: 800;
+    background: linear-gradient(#9356DC, #FF79DA);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    opacity: 0.1;
+  }
+  100% {
+    font-weight: 800;
+    background: linear-gradient(#9356DC, #FF79DA);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
 }
-.fonctionnement__menu-cartes {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #c6c6c6;
-  margin-bottom: 20px;
+/** animation loading page d'accueil**/
+@keyframes agrandir {
+  0% {
+    transform: scale(0, 0);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1, 1);
+    opacity: 1;
+  }
 }
-.fonctionnement__menu-cartes__rond {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #9356DC;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  color: white;
-  margin-right: 5px;
+@keyframes translater {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(50px);
+  }
 }
-
+/* animation de process of loading*/
+@keyframes accueil-chargement {
+  0% {
+    opacity: 0;
+  }
+  90% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 * {
   box-sizing: border-box;
 }
