--- a/doc-sass/pages/_accueil.scss
+++ b/doc-sass/pages/_accueil.scss
@@ -69,7 +69,7 @@
 
 .localiser{
     background-color: #EAEAEA;
-    padding: 10px 0px 10px 80px;
+    padding: 20px 0px 20px 10px;
     box-shadow: inset 0px 6px 6px -3px #c6c6c6;
     &__form{
         display: flex;
@@ -87,12 +87,12 @@
             font-weight: 700;
             opacity: 0.6;
             padding-left: 10px;
-            &:focus{
+            /*&:focus{
                 outline: none;
             }
             &::placeholder{
                 color: #000;
-            }
+            }*/
         }
     }
 }
@@ -132,17 +132,20 @@
     }
     &__menu-cartes{
         display: flex;
-        justify-content: center;
         align-items: center;
         background-color: #ebebeb;
-        width: 90%;
+        width: 80%;
+        margin-left: 5%;
+        padding-top: 5px;
+        padding-bottom: 5px;
         margin-bottom: 30px;
-        border-radius: 25px;
+        border-radius: 20px;
+        box-shadow: 3px 3px 10px 3px #dfdddd;
         &:hover{
             cursor: pointer;
-            box-shadow: 3px 3px 15px 3px #dfdddd;
             i{
                 color: $primary-color;
+                opacity: 1;
             }            
         }
         &__rond{
@@ -154,7 +157,7 @@
             height: 30px;
             border-radius: 50%;
             color: white;
-            margin-left: -70px;   
+            margin-left: -20px;
         }
         &--icon{
             color: black;
@@ -166,6 +169,22 @@
             font-size: 90%;
             
         }
+    }
+}
+
+
+.device-adapter{
+    width: 100%;
+}
+.width-adapter{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    @media screen and (min-width: map-get($breakpoints, desktop)){
+            display: flex;
+            flex-direction: row;
+            justify-content:space-evenly;
     }
 }
 
@@ -181,12 +200,17 @@
         font-size: 120%;
         font-weight: bolder;
         margin-left: -50%;
+        
     }
+
     &__figure{
         width: 90%;
         background-color: #FFF;
         margin-bottom: 30px;
         border-radius: 25px;
+        @media screen and (min-width: map-get($breakpoints, desktop)){
+                width: 45%;
+        }
         &:hover{            
                 box-shadow: 3px 3px 15px 3px #dfdddd;
                 cursor: pointer;            
@@ -204,7 +228,8 @@
                 p{
                     background-color:$tertiary-color;
                     color: #06634c;
-                    padding: 5px;
+                    padding:  5px 15px 5px 15px;
+                    border-radius: 2px;
                     animation: anim-nouveau 3s ease-in-out 1s infinite;
                 }
             }
@@ -251,18 +276,23 @@
 
 footer{
     padding-top: 30px;
-    background-color: #000;
-    opacity: 0.7;
-    color: #FFF;
     padding-left: 30px;
     padding-bottom: 40px;
+    @media screen and (min-width: map-get($breakpoints, desktop)) {
+        padding-left: 40%;
+        font-size: 120%;
+    }
+    background-color: rgb(56, 56, 56);
+    opacity: 0.5;
+    color: #FFF;
+    
     a{
         text-decoration: none;
         color: #FFF;
     }
     .footer__logo{
-        font-family: shrikand;
-        font-size: 90%;
+        font-family: shrikhand;
+        letter-spacing: 3px;
         margin-bottom: 0;
         padding-top: 5px;
     }
@@ -270,3 +300,5 @@ footer{
         margin-right: 5px;
     }
 }
+
+
