--- a/doc-sass/pages/_accueil.scss
+++ b/doc-sass/pages/_accueil.scss
@@ -1,46 +1,31 @@
-
-/**
-
-*, *::before, *::after{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-    height: 100vh;
-    background: #c5cae9;
-  }**/
-  
-  .box{
+.box{
     background: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 0;
-  }
+}
   
-  .container{
+.container{
     width: 300px;;
     display: flex;
     justify-content: space-evenly;
     position: relative;
     top: 400px;
     animation: chargement 4s forwards;
-    i{
-      color: $primary-color; 
-      animation: translater 0.6s linear 0.1s infinite;
-      margin-right: 30px;
+    .bille{
+        width: 10px;
+        height: 10px;
+        background-color: $primary-color;
+        color: $primary-color; 
+        animation: translater 0.6s linear 0.1s infinite;
+        margin-right: 30px; 
       
       &:first-child{
         position: absolute;
         top: 0;
         left: 0;
-        animation: agrandir 1000ms ease-in-out 0ms infinite;
+        animation: agrandir 1s ease-in-out 0s infinite;
       }
       
       &:last-child{
@@ -48,23 +33,23 @@
         top: 0;
         right: 0;
         margin-right: 0;
-        animation: agrandir 1000ms ease-in-out 0s infinite;
+        animation: agrandir 1s ease-in-out 0s infinite;
       }
     }
-  }
+}
 
-  @keyframes chargement{
-    0%{
-        visibility: visible;
-    }
-    100%{
-        visibility: hidden;
-    }
- } 
+.back-animation{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: $tertiary-color;
+    animation: anim-back 4s ease-in-out forwards;
+}
 
-  .loading-home{
+.loading-home{
     animation: accueil-chargement 4s forwards;
   }
+  
   /******/
 
 .localiser{
@@ -87,12 +72,6 @@
             font-weight: 700;
             opacity: 0.6;
             padding-left: 10px;
-            /*&:focus{
-                outline: none;
-            }
-            &::placeholder{
-                color: #000;
-            }*/
         }
     }
 }
@@ -169,22 +148,6 @@
             font-size: 90%;
             
         }
-    }
-}
-
-
-.device-adapter{
-    width: 100%;
-}
-.width-adapter{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    @media screen and (min-width: map-get($breakpoints, desktop)){
-            display: flex;
-            flex-direction: row;
-            justify-content:space-evenly;
     }
 }
 
@@ -271,33 +234,6 @@
 
 
         }
-    }
-}
-
-footer{
-    padding-top: 30px;
-    padding-left: 30px;
-    padding-bottom: 40px;
-    @media screen and (min-width: map-get($breakpoints, desktop)) {
-        padding-left: 40%;
-        font-size: 120%;
-    }
-    background-color: rgb(56, 56, 56);
-    opacity: 0.5;
-    color: #FFF;
-    
-    a{
-        text-decoration: none;
-        color: #FFF;
-    }
-    .footer__logo{
-        font-family: shrikhand;
-        letter-spacing: 3px;
-        margin-bottom: 0;
-        padding-top: 5px;
-    }
-    i{
-        margin-right: 5px;
     }
 }
 
