--- a/doc-sass/layout/_header.scss
+++ b/doc-sass/layout/_header.scss
@@ -2,6 +2,10 @@ header{
     display:flex;
     justify-content: center;
     padding: 15px;
+    background-color: white;
+    width: 100%;
+    position: fixed;
+    z-index: 1;
     img{
         width: 200px;
         height: 40px;
