--- a/doc-sass/pages/_accueil.scss
+++ b/doc-sass/pages/_accueil.scss
@@ -56,6 +56,7 @@
     background-color: #EAEAEA;
     padding: 20px 0px 20px 10px;
     box-shadow: inset 0px 6px 6px -3px #c6c6c6;
+    margin-top: 70px;
     &__form{
         display: flex;
         justify-content: center;
@@ -188,7 +189,7 @@
             h4{
                 margin-top: -210px;
                 margin-right: 30px;
-                p{
+                span{
                     background-color:$tertiary-color;
                     color: #06634c;
                     padding:  5px 15px 5px 15px;
