--- a/doc-sass/pages/_menu.scss
+++ b/doc-sass/pages/_menu.scss
@@ -2,6 +2,7 @@
     width: 100%;
     height: 300px;
     object-fit: cover;
+    margin-top: 70px;
         
 }
 
@@ -31,7 +32,7 @@
             font-weight:600;
         }
         i{
-            padding-right: 15%;
+            padding-right: 10%;
             padding-left: 2px;
             font-size: 150%;
            &:hover{
