--- a/doc-css/style-projet3.css
+++ b/doc-css/style-projet3.css
@@ -53,6 +53,7 @@
   background-color: #EAEAEA;
   padding: 20px 0px 20px 10px;
   box-shadow: inset 0px 6px 6px -3px #c6c6c6;
+  margin-top: 70px;
 }
 .localiser__form {
   display: flex;
@@ -186,7 +187,7 @@
   margin-top: -210px;
   margin-right: 30px;
 }
-.cards__figure--nouveau h4 p {
+.cards__figure--nouveau h4 span {
   background-color: #99E2D0;
   color: #06634c;
   padding: 5px 15px 5px 15px;
@@ -228,6 +229,7 @@
   width: 100%;
   height: 300px;
   object-fit: cover;
+  margin-top: 70px;
 }
 
 /***/
@@ -255,7 +257,7 @@
   font-weight: 600;
 }
 .menu__titre i {
-  padding-right: 15%;
+  padding-right: 10%;
   padding-left: 2px;
   font-size: 150%;
 }
@@ -386,6 +388,10 @@ header {
   display: flex;
   justify-content: center;
   padding: 15px;
+  background-color: white;
+  width: 100%;
+  position: fixed;
+  z-index: 1;
 }
 header img {
   width: 200px;
@@ -575,6 +581,9 @@ body {
   margin: 0;
 }
 
+/*.position-fixe{
+
+}*/
 .device-adapter {
   width: 100%;
 }
