--- a/doc-css/style-projet3.css
+++ b/doc-css/style-projet3.css
@@ -10,9 +10,9 @@
   width: 300px;
   display: flex;
   justify-content: space-evenly;
-  position: relative;
+  position: fixed;
   top: 400px;
-  animation: chargement 4s forwards;
+  animation: chargement 3s forwards;
 }
 .container .bille {
   width: 10px;
@@ -37,15 +37,17 @@
 }
 
 .back-animation {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
+  top: 0;
+  left: 0;
   background-color: #99E2D0;
-  animation: anim-back 4s ease-in-out forwards;
+  animation: anim-back 3.1s ease-in-out forwards;
 }
 
 .loading-home {
-  animation: accueil-chargement 4s forwards;
+  animation: accueil-chargement 3.1s forwards;
 }
 
 /******/
@@ -298,7 +300,7 @@
   width: 80%;
 }
 .menu__contenu--descrip h2 {
-  font-size: 120%;
+  font-size: 100%;
   margin-bottom: 5px;
   padding-left: 5px;
   overflow: hidden;
@@ -306,7 +308,7 @@
   white-space: nowrap;
 }
 .menu__contenu--descrip p {
-  font-size: 100%;
+  font-size: 85%;
   margin-top: 0;
   padding-left: 5px;
   overflow: hidden;
